examples/test/testpolicy7370.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7370
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key16: value8
      key25: value1
      key6: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value37
          key18: value46
          key43: value45
      podSelector:
        matchLabels:
          key35: value11
